[package]
name = "neon_breach"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "file_watcher",  # Changed from "filesystem_watcher"
    "multi-threaded",  # Add this line
    "tonemapping_luts",
    "dynamic_linking"  # Optional: remove if not needed
]}
bevy_asset_loader = { version = "0.20.2" }
bevy_kira_audio = { version = "0.19.0", default-features = false, features = ["wav", "ogg"] }
rand = "0.8.5"
bevy_jornet = "0.7.0"
